objects/Contact_Method__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Method</relationshipLabel>
    <relationshipName>Contact_Method</relationshipName>
    <type>Lookup</type>
</CustomField>