objects/Contact_Method__c/fields/Address_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Code__c</fullName>
    <label>Address Code</label>
    <type>TextArea</type>
</CustomField>