objects/Contact_Method__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Method</relationshipLabel>
    <relationshipName>Contact_Method</relationshipName>
    <type>Lookup</type>
</CustomField>