objects/Contact_Method__c/fields/Contact_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Contact_Instructions__c</fullName>
    <label>Contact Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>