objects/Contact_Method__c/fields/Contact_Method_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Subtype__c</fullName>
    <label>Contact Method Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Method_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>