objects/Contact_Method__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>