objects/Contact_Method__c/fields/Is_Red_List__c.field-meta.xml
<CustomField>
    <fullName>Is_Red_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Red List</label>
    <type>Checkbox</type>
</CustomField>