objects/Contact_Method__c/fields/Is_Solicitable__c.field-meta.xml
<CustomField>
    <fullName>Is_Solicitable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Solicitable</label>
    <type>Checkbox</type>
</CustomField>