objects/Contact_Method__c/fields/Is_Used_For_News__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_For_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Used For News</label>
    <type>Checkbox</type>
</CustomField>