objects/Contact_Method__c/fields/Is_Used_For_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_For_Suggestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Used For Suggestion</label>
    <type>Checkbox</type>
</CustomField>