objects/Contact_Method__c/fields/Last_Validated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated_DateTime__c</fullName>
    <label>Last Validated Date/Time</label>
    <type>DateTime</type>
</CustomField>