objects/Contact_Method__c/fields/Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Area_Code__c</fullName>
    <label>Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>