objects/Contact_Method__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Contact Method</relationshipLabel>
    <relationshipName>Contact_Method</relationshipName>
    <type>Lookup</type>
</CustomField>