objects/Contact_Method__c/fields/Postman_Beat__c.field-meta.xml
<CustomField>
    <fullName>Postman_Beat__c</fullName>
    <label>Postman Beat</label>
    <type>TextArea</type>
</CustomField>