objects/Contact_Method__c/fields/Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Validation_Result__c</fullName>
    <label>Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Invalid But Accepted</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>